petite correction au niveau du footer dans la version mobile

--- a/style.css
+++ b/style.css
@@ -105,4 +105,8 @@ span{
     #playliste{
         padding-bottom: 5%;
     }
+
+    .footer{
+        font-size:xx-small;
+    }
 }
